crates/rome_js_formatter/tests/specs/prettier/typescript/conformance/types/functions/functionOverloadErrorsSyntax.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 123
expression: functionOverloadErrorsSyntax.ts

---
# Input
```js
//Function overload signature with optional parameter followed by non-optional parameter
function fn4a(x?: number, y: string);
function fn4a() { }

function fn4b(n: string, x?: number, y: string);
function fn4b() { }

//Function overload signature with rest param followed by non-optional parameter
function fn5(x: string, ...y: any[], z: string);
function fn5() { }

```

# Output
```js
//Function overload signature with optional parameter followed by non-optional parameter
function fn4a(x?: number, y: string);
function fn4a() {}

function fn4b(n: string, x?: number, y: string);
function fn4b() {}

//Function overload signature with rest param followed by non-optional parameter
function fn5(x: string, ...y: any[], z: string);
function fn5() {}

```

# Errors
```
error[SyntaxError]: rest elements may not have trailing commas
  ┌─ functionOverloadErrorsSyntax.ts:9:25
  │
9 │ function fn5(x: string, ...y: any[], z: string);
  │                         ^^^^^^^^^^^


```


